tests/ui/type-alias-impl-trait/defining-scopes-cycle-prevention.stderr
error[E0391]: cycle detected when computing type of `Foo::{opaque#0}`
  --> $DIR/defining-scopes-cycle-prevention.rs:6:12
   |
LL | type Foo = impl std::fmt::Debug;
   |            ^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires type-checking `bar`...
  --> $DIR/defining-scopes-cycle-prevention.rs:16:5
   |
LL |     is_send::<Foo>();
   |     ^^^^^^^^^^^^^^
   = note: ...which requires evaluating trait selection obligation `Foo: core::marker::Send`...
   = note: ...which again requires computing type of `Foo::{opaque#0}`, completing the cycle
note: cycle used when checking item types in top-level module
  --> $DIR/defining-scopes-cycle-prevention.rs:1:1
   |
LL | / #![feature(type_alias_impl_trait)]
LL | |
LL | | // Check that, even within the defining scope, we can get the
LL | | // `Send` or `Sync` bound of a TAIT, as long as the current function
...  |
LL | |
LL | | fn main() {}
   | |____________^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
